tests/rpm-pkgs/libidn2-2.3.2-3.fc35/output-exp@divine/scan-results.err
Error: COMPILER_WARNING:
libidn2-2.3.2/gl/gettext.h:149:1: warning: unused function 'pgettext_aux'
#pgettext_aux (const char *domain,
#^
#  147|   #endif
#  148|   static const char *
#  149|-> pgettext_aux (const char *domain,
#  150|                 const char *msg_ctxt_id, const char *msgid,
#  151|                 int category)

Error: COMPILER_WARNING:
libidn2-2.3.2/gl/gettext.h:168:1: warning: unused function 'npgettext_aux'
#npgettext_aux (const char *domain,
#^
#  166|   #endif
#  167|   static const char *
#  168|-> npgettext_aux (const char *domain,
#  169|                  const char *msg_ctxt_id, const char *msgid,
#  170|                  const char *msgid_plural, unsigned long int n,

Error: COMPILER_WARNING:
libidn2-2.3.2/gl/gettext.h:219:1: warning: unused function 'dcpgettext_expr'
#dcpgettext_expr (const char *domain,
#^
#  217|   #endif
#  218|   static const char *
#  219|-> dcpgettext_expr (const char *domain,
#  220|                    const char *msgctxt, const char *msgid,
#  221|                    int category)

Error: COMPILER_WARNING:
libidn2-2.3.2/gl/gettext.h:266:1: warning: unused function 'dcnpgettext_expr'
#dcnpgettext_expr (const char *domain,
#^
#  264|   #endif
#  265|   static const char *
#  266|-> dcnpgettext_expr (const char *domain,
#  267|                     const char *msgctxt, const char *msgid,
#  268|                     const char *msgid_plural, unsigned long int n,

Error: COMPILER_WARNING:
libidn2-2.3.2/lib/version.c:62:23: warning: implicit declaration of function 'strverscmp' is invalid in C99
#  if (!req_version || strverscmp (req_version, IDN2_VERSION) <= 0)
#                      ^
#   60|   idn2_check_version (const char *req_version)
#   61|   {
#   62|->   if (!req_version || strverscmp (req_version, IDN2_VERSION) <= 0)
#   63|       return IDN2_VERSION;
#   64|   

Error: COMPILER_WARNING:
libidn2-2.3.2/lib/version.c:62:23: warning: this function declaration is not a prototype
#   60|   idn2_check_version (const char *req_version)
#   61|   {
#   62|->   if (!req_version || strverscmp (req_version, IDN2_VERSION) <= 0)
#   63|       return IDN2_VERSION;
#   64|   

Error: COMPILER_WARNING:
libidn2-2.3.2/src/idn2.c:59:22: warning: format string is not a string literal
#    fprintf (stderr, _("Try `%s --help' for more information.\n"),
#                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
libidn2-2.3.2/src/idn2.c:38:19: note: expanded from macro '_'
##define _(String) dgettext (PACKAGE, String)
#                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
libidn2-2.3.2/gl/gettext.h:70:38: note: expanded from macro 'dgettext'
## define dgettext(Domainname, Msgid) ((void) (Domainname), gettext (Msgid))
#                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#   57|   {
#   58|     if (status != EXIT_SUCCESS)
#   59|->     fprintf (stderr, _("Try `%s --help' for more information.\n"),
#   60|   	     program_name);
#   61|     else

Error: COMPILER_WARNING:
libidn2-2.3.2/src/idn2.c:63:15: warning: format string is not a string literal
#      printf (_("\
#              ^~~~
libidn2-2.3.2/src/idn2.c:38:19: note: expanded from macro '_'
##define _(String) dgettext (PACKAGE, String)
#                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
libidn2-2.3.2/gl/gettext.h:70:38: note: expanded from macro 'dgettext'
## define dgettext(Domainname, Msgid) ((void) (Domainname), gettext (Msgid))
#                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#   61|     else
#   62|       {
#   63|->       printf (_("\
#   64|   Usage: %s [OPTION]... [STRINGS]...\n\
#   65|   "), program_name);

Error: COMPILER_WARNING:
libidn2-2.3.2/src/idn2.c:153:13: warning: string literal of length 28846 exceeds maximum length 4095 that ISO C99 compilers are required to support
#      puts (CONDITIONS);
#            ^~~~~~~~~~
libidn2-2.3.2/src/blurbs.h:35:3: note: expanded from macro 'CONDITIONS'
#  "                       TERMS AND CONDITIONS\n"                       \
#  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#  151|     else if (strcmp (readbuf, "show c") == 0)
#  152|       {
#  153|->       puts (CONDITIONS);
#  154|         return;
#  155|       }

Error: COMPILER_WARNING:
libidn2-2.3.2/src/idn2.c:217:22: warning: format string is not a string literal
#    fprintf (stderr, _("Charset: %s\n"), locale_charset ());
#                     ^~~~~~~~~~~~~~~~~~
libidn2-2.3.2/src/idn2.c:38:19: note: expanded from macro '_'
##define _(String) dgettext (PACKAGE, String)
#                  ^~~~~~~~~~~~~~~~~~~~~~~~~~
libidn2-2.3.2/gl/gettext.h:70:38: note: expanded from macro 'dgettext'
## define dgettext(Domainname, Msgid) ((void) (Domainname), gettext (Msgid))
#                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
#  215|   
#  216|     if (args_info.debug_given)
#  217|->     fprintf (stderr, _("Charset: %s\n"), locale_charset ());
#  218|   
#  219|     if (!args_info.quiet_given
